web-client/src/App.css
* {
  box-sizing: border-box;
}

body {
  font-family: "Inter", sans-serif;
  font-size: 18px;
  margin: 20px;
  background-color: #fbf4f7;
  color: #333;
  display: flex;
  flex-direction: column;
  align-items: center;
}

h1 {
  margin: 0;
}

.zugai {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.card {
  padding: 8px;
  border: 2px solid hsl(330deg, 50%, 80%);
  border-radius: 4px;
  background-color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.settings,
.output {
  margin-top: 8px;
}

.settings form {
  min-width: 30vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.settings textarea {
  font-family: inherit;
  color: #222;
}

.settings form > * + * {
  margin-top: 8px;
}

.settings form label {
  display: flex;
  justify-content: center;
}

.output img {
  max-height: calc(100vh - 260px);
}

